# gifutil

./: .gitignore  CMakeLists.txt  core.h  extract.c  extract.h  gifutil.c  gifutil.h  inspect.c  inspect.h  main.c
